# ysos_platform_as81_exe

./: README.md
app/src/main/cpp/android/armeabi-v7a/conf/: ysos.conf
app/src/main/cpp/android/armeabi-v7a/conf/appmanager/: daemon_client.xml
app/src/main/cpp/android/armeabi-v7a/conf/callback/: default@OnS1_0StrategyCallback.xml  default@OnS1_0ToS1_1StrategyCallback.xml  default@OnS1_1StrategyCallback.xml  default@OnS1_1ToS1_2StrategyCallback.xml  default@OnS1_2StrategyCallback.xml  default@OnS1_2ToS1_0StrategyCallback.xml  default@StateMachineStrategyProxyCallbackImpl.xml  default@TemplateGenerateEventIoctlStrategyCallback.xml  default@TemplateModuleCallback.xml  default@TemplateStrategyCallback.xml  default@TemplateTransitionCallback.xml
app/src/main/cpp/android/armeabi-v7a/conf/event/: event_name_map.xml
app/src/main/cpp/android/armeabi-v7a/conf/instance/: callback_instance.xml  connection_instance.xml  connectioncallback_instance.xml  driver_instance.xml  module_instance.xml  module_link_instance.xml  protocol_instance.xml  repeater_instance.xml  rpc_instance.xml  rpccallback_instance.xml  strategy_instance.xml  transportcallback_instance.xml
app/src/main/cpp/android/armeabi-v7a/conf/log/: log.properties  log.properties.template
app/src/main/cpp/android/armeabi-v7a/conf/module/: default@TemplateModule.xml
app/src/main/cpp/android/armeabi-v7a/conf/module_link/: template_module_link.xml
app/src/main/cpp/android/armeabi-v7a/conf/protocol/: default@ConvertProtocol.xml  default@StringProtocol.xml
app/src/main/cpp/core/trunk/main/framework/test/: CMakeLists.txt
app/src/main/cpp/core/trunk/main/framework/test/src/: test_core.cpp
app/src/main/cpp/plugins/trunk/main/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
(+36 files in other folders)
